--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-<<body>
-  <<title>Mother-fucking-website</title>
+<body>
+  <title>Mother-fucking-website</title>
   <h1>This is a motherfucking website.</h1>
 <h2>And it's fucking perfect.</h2>
 <h3>Seriously, what the fuck else do you want?</h3>
